# Ballerina-Cappucina

./: CMakeLists.txt  LICENSE  README.md  encoders_UART_esp.c  esp_motor_test.c  gist.md  motor_test.py  movement-test-motors.c  package.xml
Ballerina-Cappucina-ros_1/: move_bot_ros1.py  pwm_motor_esp_code
Ballerina-Cappucina-ros_1/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
ESP_Code/: README.md
Important_Notes/.obsidian/: graph.json  workspace.json
Important_Notes/Ballerina Cappucina/: Control Bootcamp.md  Logs.md  Onshape.md  OpenCV Basics.md
Important_Notes/Ballerina Cappucina/.obsidian/: workspace.json
Movement/: README.md
Movement/main/: CMakeLists.txt  Movement.c
ball_tracker/: setup.py
ball_tracker/ball_tracker/: move_bot.py  process_image.py
ball_tracker/config/: green_ball.yaml
ball_tracker1/: detect_ball.py  marker_generate.py  move_bot.py  process_image.py
bhakti_notes/.obsidian/: appearance.json  workspace.json
bhakti_notes/Daily/: 2025-06-27.md
bhakti_notes/control bootcamp/: CLOSED LOOP FEEDBACK.md  INTRODUCTION.canvas
bhakti_notes/obsidian tools/: 6 imp tools.md  headers.md
catkin_ws/ball_tracker/: CMakeLists.txt  package.xml
catkin_ws/ball_tracker/launch/: follow_ball.launch
catkin_ws/ball_tracker/scripts/: detect_ball_ros1.py
catkin_ws/ball_tracker/src/: process_image.py
esp_code/: CMakeLists.txt
important_notes/: ControlBootCamp.md
launch/: omni_bot.launch.py
media/: Ball_Trapping.webm  Ballerina_test_movement.webm  Screencast from 07-27-2025 08:26:11 PM.webm
movement/5_PWM/: sdkconfig
movement/5_PWM/main/: pwm_test.c
old_ros_ws/ball_tracker/ball_tracker/: detect_ball.py
old_ros_ws/ball_tracker/config/: blue_ball.yaml  yellow_ball.yaml
old_ros_ws/install/: local_setup.sh  setup.sh
old_ros_ws/log/: latest_build
old_ros_ws/parts/: holders.stl
old_ros_ws/src/: gazebo_ros_omni_drive.cpp
parts/: Ball_rotator.step  Base.step  Circular Chassis.step  README.md  coupler.stl  motorcoupler.step  motorholder.step
ros_1/src/: ball_follow.launch  detect_ball_ros1.py  move_bot_ros1.py
ros_ws/: README.md
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/log/: latest_build
serial test/: old.py
urdf/: omni_bot.urdf
(+41 files in other folders)
