<?xml version="1.0"?>
<package format="2">
  <name>ball_tracking</name>
  <version>0.0.1</version>
  <description>Ball detection and movement tracking using ROS1</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-opencv</exec_depend>
</package>
